--- a/NewTeacher/Team/TeamDiscuss.resx
+++ b/NewTeacher/Team/TeamDiscuss.resx
@@ -124,69 +124,94 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
-        CgAAAk1TRnQBSQFMAgEBAgEAAVABAAFQAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
+        CgAAAk1TRnQBSQFMAgEBAgEAAWgBAAFoAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
         AwABFAMAAQEBAAEgBgABGRoAAygBPQNEAXk0AAMgAS8DSwGO/AADGAEhAV8CWAHjAxwBJywAAwYBCANV
         AbUDNgFZCAADPgFrAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHN
         AVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAyYBOKgA
-        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEX
-        AQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wMSARmwAAFM
-        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFvARcBCAH/AW8BFwEIAf8BbwEX
-        AQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFhAVgBVgHmAWEBWAFXAeIBbwEXAQgB/wFeAloB1QFv
-        ARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFgAVoBWAHeuAABOgI5
-        AWABagExAScB+QNTAaoDDAEQDAADBAEGAz8BbQFiATcBMwH2AVkCVwG/AwQBBhQAAV4BWgFZAdkBbwEX
-        AQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AT0CPAFnAU4CTQGWAW8BFwEIAf8DNwJa
-        AlgBwAFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BRwJGAYC8AAMcASgDTgGZ
-        AWUBLAEdAf0BYQFWAVUB5AFcAlkBzAFgAlgB3gFoAUABNwH1AVwCWAHRAykBPhwAAzwBZgFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AWIBSgFJAe8DGQEjAz0BaQFvARcBCAH/AycBOwMwAUsBZQEs
-        AR0B/QFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFlAUABPQH0AyMBM7gAAwcBCgNFAX0BYgFLAUkB7wFT
-        Ak8BpQM1AVYDEwEaAysEQgF1AWEBWgFYAdwBVgJVAbEDGAEhGAADCwEPAVYCVQG0AWEBVQFUAeQBagEv
-        AScB+QFvARcBCAH/AVwCWAHRAwYBCAFPAk4BlwFeAVwBWwHOAzUBVwMVAR0BYgFSAVEB6QFvARcBCAH/
-        AWgBQAE3AfUBXgJYAd0DTAGTAwQBBrQAAwQBBQFaAlcBvQFYAlYBwQMZASMDAQECDwABAQMQARUDRAF6
-        AWQBUwFPAewDGgEkGAADAgEDAxIBGAMfASwBUgJQAaMBUgJRAaEDBwEKA1EBogNWAbYBRQJEAXwDCgEO
-        AV4BWQFYAdkBSgJJAYkDHQEpAw0BErwAA0EBcgFkAVMBUQHsAxYBHxwAAwgBCwNRAaIBWAJWAbkoAAMe
-        ASsBTQJMAZEDGAEiBAADLQFGA0oBigMTARrIAAFeAlkB2QMhATAoAAFeAlkB2QMjATMkAAFHAkYBgAMT
-        ARoMAAMfAS0DLgFHxAADIAEuAWACXAHULAABVQJTAa0BTgJNAZUgAAMNAREBUgJQAaQQAAMKAQ4DUAGa
-        AwQBBsAAAzwBZgNWAbYDIAEuA0wBkgFcAloBzQFcAloBzQNMAZMDIAEuAwQBBQQAAw0BEgNCAXYBbwEX
-        AQgB/wFvARcBCAH/AVwCWQHMIAADSAGFAyYBOQFIAkcBgwM7AWUDBQEHA0MBdwE9AjwBZwM7AWMBPgI9
-        AWrAAAM8AWYBZwFIAUQB8gFqATEBJwH5AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BagEx
-        AScB+QNKAY0DDQESA1kBxwFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFcAlkBzCAAAUYCRQF+AxgBIgMa
-        ASUDNwFaAUkCSAGHAygBPQMmATgDGAEiAUcCRgGBwAADNQFXAW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFhAVsBWgHhAW8BFwEIAf8BbwEX
-        AQgB/wFvARcBCAH/AW8BFwEIAf8BVwJWAbggAAFMAksBjwMwAUwBPQI8AWcDOAFeAxsBJgM6AWIDOgFh
-        AzUBVwFFAkQBfMQAAWIBNwEzAfYBbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8DNwFa
-        IAADTgGYAj0BPAFnFAADTgGZAzEBTcQAA0sBjgFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BXAJY
-        AdEDBwEKIAADTgGYA0gBhgQAAwYBCAMcAScEAAMIAQsBXQJZAdcDMQFNxAADFgEeAWEBVgFVAegBbwEX
-        AQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbgErAR0B/AIxATABTSQAAUYCRQF+AWcBSAFFAfIDRAF5AV0CWQHSAW8BFwEIAf8DUwGq
-        A1EBogFoAUABNwH1AyABLsgAAxUBHQFgAlsB1gFvARcBCAH/AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/
-        AW8BFwEIAf8BbwEXAQgB/wFvARcBCAH/AWMBSgFEAfADLwFJAwIBAyQAAxgBIgFoAUABOAH1AW8BFwEI
-        Af8BbwEXAQgB/wFvARcBCAH/AW8BFwEIAf8BZwFIAUUB8gMuAUjQAAMVAR0BTQJMAZEBXgJaAdgBXwEj
-        ASEB+wFvARcBCAH/AW8BFwEIAf8BZQFYAVcB5QFVAlMBrQMlATcwAAMhATADUQGiAVwCWQHMAVwCWQHM
-        AVgCVgG5AzgBXQMBAQLgAAMhATADBAEG/wARAAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQABAQUA
-        AfAXAAP/AQABzwH/AZ8C/wcAAccB/wEYCQABxwH/ARgJAAHxAfwBOAEAAQEHAAH4AXABfAEAAQEHAAH8
-        AQEB/AEAAQEHAAH4AQAB/AEAAQEHAAHwAXABfgEAAQcHAAHxAfwBfwHiAT8HAAHzAf8BPwHnAT8HAAHn
-        Af8BPwHPAR8HAAHgAQgBPwHAAR8HAAHgAQABPwHAAR8HAAHgAQABPwHAAR8HAAHwAQABPwHPAZ8HAAHw
-        AQABPwHJAR8HAAHwAQABfwHAAR8HAAH4AQABfwHAAT8HAAH8AQEB/wHgAT8HAAH/Ac8D/wcACw==
-</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="picAddMem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAQVJREFUeF7t
-        kEEOgkAQBHkDf9ervgsfo2kDBrC5mFmcne5KKtnTTqoHY4wxxhhjjMnAeJlu81OT8fp4So/wHkB5hM8A
-        qiNsBlAc4WsAtRHoAFBlBBq/qDACDV9bfQQavbfyCDSYWXUEGnvkGSPQw5lsPQI9ms2WI9CDGW01Aj2W
-        1RYj0EOZjR6BHslu5Aj0QA9GjUA/78WIEejH3Tjd54zf4R/3YEA84J9nNyge8AOZDYwH/EhWg+MBP5TR
-        BvGAH8tmo3jAD2ayYfw/4JFHFosHPJRZMB7w2L1F4wEPXls4HvDoxeLxgIdDgXggHQ+k44F0PJCOB9Lx
-        QDreGGOMMcYYcxLD8AJGyHIZ0tA0ggAAAABJRU5ErkJggg==
+        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/
+        AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEU
+        AQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wMSARmwAAFM
+        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFsARQBBQH/AWwBFAEFAf8BbAEU
+        AQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFhAlgB5gFhAVwBWwHiAWwBFAEFAf8BXgJaAdUBbAEU
+        AQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BYAJaAd64AAE6AjkBYAFq
+        ATcBKgH5A1MBqgMMARAMAAMEAQYDPwFtAWIBOwE2AfYBWQJXAb8DBAEGFAABXgJbAdkBbAEUAQUB/wFs
+        ARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AT0CPAFnAU4CTQGWAWwBFAEFAf8DNwJaAlgBwAFs
+        ARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BRwJGAYC8AAMcASgDTgGZAV8BLwEg
+        Af0BYQFaAVkB5AFcAlkBzAFgAloB3gFkAUIBQAH1AVwCWAHRAykBPhwAAzwBZgFsARQBBQH/AWwBFAEF
+        Af8BbAEUAQUB/wFsARQBBQH/AWIBTQFMAe8DGQEjAz0BaQFsARQBBQH/AycBOwMwAUsBXwEvASAB/QFs
+        ARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFlAUMBQAH0AyMBM7gAAwcBCgNFAX0BYgFOAUwB7wFTAk8BpQM1
+        AVYDEwEaAysEQgF1AWECXAHcAVYCVQGxAxgBIRgAAwsBDwFWAlUBtAFhAVkBWAHkAWoBNQEqAfkBbAEU
+        AQUB/wFcAlgB0QMGAQgBTwJOAZcBXgJcAc4DNQFXAxUBHQFiAVgBVgHpAWwBFAEFAf8BZAFCAUAB9QFe
+        AlgB3QNMAZMDBAEGtAADBAEFAVoCVwG9AVgCVgHBAxkBIwMBAQIPAAEBAxABFQNEAXoBZAFZAVUB7AMa
+        ASQYAAMCAQMDEgEYAx8BLAFSAlABowFSAlEBoQMHAQoDUQGiA1YBtgFFAkQBfAMKAQ4BXgJbAdkBSgJJ
+        AYkDHQEpAw0BErwAA0EBcgFkAVkBVwHsAxYBHxwAAwgBCwNRAaIBWAJWAbkoAAMeASsBTQJMAZEDGAEi
+        BAADLQFGA0oBigMTARrIAAFeAlsB2QMhATAoAAFeAlsB2QMjATMkAAFHAkYBgAMTARoMAAMfAS0DLgFH
+        xAADIAEuAWACXAHULAABVQJTAa0BTgJNAZUgAAMNAREBUgJQAaQQAAMKAQ4DUAGaAwQBBsAAAzwBZgNW
+        AbYDIAEuA0wBkgFcAloBzQFcAloBzQNMAZMDIAEuAwQBBQQAAw0BEgNCAXYBbAEUAQUB/wFsARQBBQH/
+        AVwCWQHMIAADSAGFAyYBOQFIAkcBgwM7AWUDBQEHA0MBdwE9AjwBZwM7AWMBPgI9AWrAAAM8AWYBZwFL
+        AUkB8gFqATcBKgH5AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BagE3ASoB+QNKAY0DDQES
+        A1kBxwFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFcAlkBzCAAAUYCRQF+AxgBIgMaASUDNwFaAUkCSAGH
+        AygBPQMmATgDGAEiAUcCRgGBwAADNQFXAWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEU
+        AQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFhAlsB4QFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFs
+        ARQBBQH/AVcCVgG4IAABTAJLAY8DMAFMAT0CPAFnAzgBXgMbASYDOgFiAzoBYQM1AVcBRQJEAXzEAAFi
+        ATsBNgH2AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEF
+        Af8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AzcBWiAAA04BmAI9ATwBZxQA
+        A04BmQMxAU3EAANLAY4BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEF
+        Af8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AVwCWAHRAwcBCiAAA04BmANI
+        AYYEAAMGAQgDHAEnBAADCAELAV0CWQHXAzEBTcQAAxYBHgFfAlcB6AFsARQBBQH/AWwBFAEFAf8BbAEU
+        AQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFrASsBIAH8
+        AjEBMAFNJAABRgJFAX4BZwFLAUkB8gNEAXkBXQJZAdIBbAEUAQUB/wNTAaoDUQGiAWQBQgFAAfUDIAEu
+        yAADFQEdAWACWwHWAWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/AWwBFAEFAf8BbAEUAQUB/wFsARQBBQH/
+        AWwBFAEFAf8BXQFOAUwB8AMvAUkDAgEDJAADGAEiAWQBQgFBAfUBbAEUAQUB/wFsARQBBQH/AWwBFAEF
+        Af8BbAEUAQUB/wFnAUsBSQHyAy4BSNAAAxUBHQFNAkwBkQFeAloB2AFfASMBIQH7AWwBFAEFAf8BbAEU
+        AQUB/wFlAV0BWwHlAVUCUwGtAyUBNzAAAyEBMANRAaIBXAJZAcwBXAJZAcwBWAJWAbkDOAFdAwEBAuAA
+        AyEBMAMEAQb/ABEAAUIBTQE+BwABPgMAASgDAAFQAwABFAMAAQEBAAEBBQAB8BcAA/8BAAHPAf8BnwL/
+        BwABxwH/ARgJAAHHAf8BGAkAAfEB/AE4AQABAQcAAfgBcAF8AQABAQcAAfwBAQH8AQABAQcAAfgBAAH8
+        AQABAQcAAfABcAF+AQABBwcAAfEB/AF/AeIBPwcAAfMB/wE/AecBPwcAAecB/wE/Ac8BHwcAAeABCAE/
+        AcABHwcAAeABAAE/AcABHwcAAeABAAE/AcABHwcAAfABAAE/Ac8BnwcAAfABAAE/AckBHwcAAfABAAF/
+        AcABHwcAAfgBAAF/AcABPwcAAfwBAQH/AeABPwcAAf8BzwP/BwAL
 </value>
   </data>
   <metadata name="memberMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>188, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAsdEVYdFRpdGxlAE5leHQ7RG91YmxlO0Fycm93O0Zhc3Q7UmV3aW5kO0luY3JlYXNlyXdAHwAA
+        BqJJREFUWEfFVXtQVHUU/mH5Ip9p2WOm0R5TUSlGM1nOmJozMfmK1IyxdESzwtQMU8sEBUEERJSXgPhC
+        1wcIgSiwPBZxYQVhhVxa5LHL7iLLU95v8Ov8FnYFvOb4D56Zb+6957v3fN/v3PO7lwF4qhBMDiUEk0MJ
+        weRQQjA5lHhwQuEaeZsfzAjD+sFsz/lbzEl0izmK5HT5ML/jeBb7PTSTbTt2gzkEy9jWIBnbcjSDqN74
+        X76/AQpDcc+/FXAU5SRs9UuYQdfP8lwf97/8lsAMtikgnf3iJ2UbfaWU6o3fSPRXLirECxh4dn/EP8jQ
+        NsArJr97+/GM4JUOR16m/HDO8SPnb+rqcTBGMZh/hmD2o08a23AolU57o7S5i6kIxU2drOheOxvACxgY
+        7nI+F9pOQNXegyuKSvx1Ortx45GkP6bP+Wo88eYBV/5FeUcPtMTHKSpM/Mz5K8bx5wnGjhlC3dTFSki8
+        sKGT3aluZXaeErbWI6WXFDAwwvFMDjSd95HX1IM7LfdR0NiFU2lqbA5IV69yPLcm/qYKmuYOZNd2QtnY
+        jaL6Lpzu49fsi1xFNUYTTEZKGrl4ByuobWP5la3se7ck9p1rIlEUgwzwB0b+cfImNO33Ia/vRk4dRxeU
+        Td3IrmiGZ5QC24PTcb2gHGm6BqSXt0JW2Yb8uk7klDfBK/I27DyS0pdsDvyEag0woqhoZXn6FmbrLGYr
+        9yZQikLAwKjfQzKhbutBFq0ws6YTsuoOpFd2QFbVDgUJiQtqsC3kBvaIshGt0CNRXYek0iak6lqQV9MO
+        sbIaNO09K51iTlh9+fNUqjnAyPLdcezrXVfplELAwGiaVqhauiGtbDcgTd+O1PI2JJe1IEHTDAkdc6pb
+        cTxVhXUeEriGy3EprxzRyipEKWshVjUgS9+M0JQSrHZLblq49YzTlNc/fJHXJgycEQED5vaHpSiu70RK
+        WasBSdpWiDUtiFM3I7a4EX8X1iOioB5xqkZI1A1wOZeLVfvEcIuQIyxLg7NyPcJyqxD5L5kpuIe9Z3Ox
+        dGeMZq6dnx3Vn0AYRTDsmMEGePK59QevQVndjvD8OkQqGxBd1IjowkZEFTYgQlkP0e1anJJXI1BWgSPX
+        70Ikr4Io8y5+Pnwdts7x2BeZC99UDQ5fK4MPoT+/YNOFGx8td5lLOtzEMCEDY753S0ZeRRutohanb9Xg
+        tLwGJ3OqEXqzCkGZlQjI4MLl8E4tw4FkLfYlaOCRpMXJ7Ar4xBdj/i8R8BQXwStFA/ckjSDPdQx6AgbG
+        0pQii94zFzyWVYUQEuXCgRl6+En18Em7i4OSXnG3RI3h3DtRjdUHJLDeeglbQqRwJyH3pFK4iksH8LPX
+        hRVZ2uy3JR0+D4IdGLdsVxykNNV8pf4k6p+uh6+0HIdJmK/aU6KDO4kfpHO/tDLYB8ioteFY7y3G3qhc
+        uMbdgZtYBS+6z8jP2SCqmWFzYMfIMS+8RBrPEfhX9aEZ4Mnxi3fGIpHeN1/poT5RLuaZoqNV66hwGQLI
+        lMOJHHxuH45v917G7os5cIlVkngxPJI18CfDDsezMe+nCx0zl/n4Pz911htUm38pHwzgIwxMsHaIwWXl
+        PXgYBLXUSi32E/h79KN373gxH9a/RmHJjkhsC5PBiX5OzlcK4Z6ggi8NneMFhYG3XO4X/sp0G0tek8Bb
+        bvpxWX4TSgcKAQMTF2yOQkReNVzEGrjQALnSkU+zW2whbafL+HKjCK7nZPjzUh4cYwrgfLUEhyRauF6+
+        Y+AtVwSmT5ttb021nieYE0x731uiY9OXh7Dpy0LokkLAwKTPqK1h8ko4XVVTB2iC49WwdUmkwsEl0z61
+        3+h7TooQqQq7Y4qoO3RPnIq2n5j4kOK35u1YQzUmE/iU9//omHmnaNmhVB37wCaIvU8wxCAD/IHJs3+4
+        iGOZemq5Bmvpm2Ble6Lm7S+c/xw+esJrxE9dsTMawTLaBYmlWOuVauJHmE/iv+WxhJEE03v2ImFviZb5
+        kPiRazr23tKj7L0lgURRCBiYNMtOhE1Bmfh4dVjHO9buAeNftXqT8vxXzItPmWV3FpuO3hDi+YDxLvYO
+        WF/Q6zGsnHeAm7FYEmCAIfoZ4A/wh8d9vPos3l3ofWGKhY0VXU8kGL/hIwjjH8GbBsxisT/jMIbFYhIc
+        gH78IAO8AG8fXynfMv0HyIhH8WYWi6jwIj8TjNGbN2IQ388AD6MJvhrTivrA43H8k8cgAzyMBR9V+HH8
+        k4XRwNOCYHIoIZgcSggmhw5g/wHM2lUpEVjydQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAt0RVh0VGl0
