--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -151,8 +151,11 @@
   <data name="打开文件" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\打开文件.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="新消息" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\新消息.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="新消息24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\新消息24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="禁止24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\禁止24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="私" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\私.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
