--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -136,6 +136,12 @@
   <data name="rt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\rt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="图片" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\图片.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="声音" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\声音.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="学生" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\学生.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -171,5 +177,8 @@
   </data>
   <data name="老师24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\老师24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="视频" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\视频.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
